--- a/package.json
+++ b/package.json
@@ -44,5 +44,7 @@
     "eslint-config-next": "12.1.6",
     "eslint-plugin-storybook": "^0.5.13",
     "typescript": "4.7.3"
-  }
+  },
+  "readme": "ERROR: No README data found!",
+  "_id": "coupang-clone-1@0.1.0"
 }
