--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "axios": "^0.27.2",
+    "cheerio": "^1.0.0-rc.12",
     "js-cookie": "^3.0.1",
     "next": "12.1.6",
     "react": "18.2.0",
